- Fix plist by installing pkgconfig to the right place - Trim header - Remove indefinite article from comment
Reported by:	pointyhat
With hat:	portmgr


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315656 35697150-7ecd-e111-bb59-0022644237b5

--- a/www/cgicc/Makefile
+++ b/www/cgicc/Makefile
@@ -1,24 +1,21 @@
-# ex:ts=8
-# New ports collection makefile for:	cgi++
-# Date created:			Mar 26, 2001
-# Whom:				Ying-Chieh Liao <ijliao@FreeBSD.org>
-#
+# Created by: Ying-Chieh Liao <ijliao@FreeBSD.org>
 # $FreeBSD$
-#
 
 PORTNAME=	cgicc
 PORTVERSION=	3.2.10
+PORTREVISION=	1
 CATEGORIES=	www devel
 MASTER_SITES=	GNU
 
 MAINTAINER=	ports@FreeBSD.org
-COMMENT=	A C++ class library for writing CGI applications
+COMMENT=	C++ class library for writing CGI applications
 
 USE_GMAKE=	yes
 USE_AUTOTOOLS=	libtool
 MAKE_ARGS=	ACLOCAL="${TRUE}" AUTOCONF="${TRUE}" AUTOHEADER="${TRUE}" \
 		AUTOMAKE="${TRUE}"
 USE_LDCONFIG=	yes
+USES=		pathfix
 
 PORTDOCS=	*
 CXXFLAGS+=	-Wno-unknown-pragmas
