- Fix build docbook-xsl is needed along with asciidoc + xsltproc - upgrade to fldigi-3.21.68 small fixes including RTTY filters - log2 is now in libm no need to kludge it
Approved by:	portmgr (miwi)


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315657 35697150-7ecd-e111-bb59-0022644237b5

--- a/comms/fldigi/Makefile
+++ b/comms/fldigi/Makefile
@@ -1,8 +1,7 @@
 # $FreeBSD$
 
 PORTNAME=	fldigi
-PORTVERSION=	3.21.59
-PORTREVISION=	1
+PORTVERSION=	3.21.68
 CATEGORIES=	comms hamradio
 MASTER_SITES=	http://www.w1hkj.com/downloads/fldigi/\
 		${MASTER_SITE_LOCAL}
@@ -14,12 +13,12 @@ COMMENT=	Digital decoder for psk, cw, psk31, olivia
 LICENSE=	GPLv3
 
 BUILD_DEPENDS=	asciidoc:${PORTSDIR}/textproc/asciidoc\
+		docbook-xsl>=1.0:${PORTSDIR}/textproc/docbook-xsl\
 		xsltproc:${PORTSDIR}/textproc/libxslt
 LIB_DEPENDS=	samplerate:${PORTSDIR}/audio/libsamplerate\
 		fltk:${PORTSDIR}/x11-toolkits/fltk
 
 GNU_CONFIGURE=	yes
-USE_DOS2UNIX=	yes
 USE_GMAKE=	yes
 USE_PKGCONFIG=	build
 CONFIGURE_ENV=	FLTK_CONFIG="${LOCALBASE}/bin/fltk-config"
