- Fix dependency on GTK2 for GTK2 option
PR:		ports/177518
Submitted by:	Roland Smith <rsmith at xs4all.nl>
Approved by:	portmgr


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315658 35697150-7ecd-e111-bb59-0022644237b5

--- a/editors/emacs/Makefile
+++ b/editors/emacs/Makefile
@@ -102,7 +102,7 @@ CONFIGURE_ARGS+=	--without-rsvg
 
 .if ${PORT_OPTIONS:MGTK2}
 USE_GNOME+=	gtk20
-CONFIGURE_ARGS+=	--with-x-toolkit=gtk
+CONFIGURE_ARGS+=	--with-x-toolkit=gtk2
 .elif ${PORT_OPTIONS:MGTK3}
 USE_GNOME+=	gtk30
 CONFIGURE_ARGS+=	--with-x-toolkit=gtk3
