fix build with glib 2.34: wv2, gimp-focusblur-plugin, gtk-murrine-engine Fix up botched variable in mysql-workbench51 that prevents patching. Correct farsight2 master_site and add mirror.
Submitted by:	pointyhat via miwi
Approved by:	portmgr (miwi)


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315661 35697150-7ecd-e111-bb59-0022644237b5

--- a/databases/mysql-workbench51/Makefile
+++ b/databases/mysql-workbench51/Makefile
@@ -73,8 +73,8 @@ post-patch:
 		${WRKSRC}/library/canvas/src/mdc_canvas_view.h \
 		${WRKSRC}/library/canvas/src/mdc_canvas_view_printing.cpp \
 		${WRKSRC}/modules/wb.mysql.import/src/stdafx.h \
-		${WKRSRC}/modules/db.mysql.sqlparser/src/stdafx.h \
-		${WKRSRC}/modules/db.mysql.sqlparser/src/mysql_sql_parser_fe.cpp \
+		${WRKSRC}/modules/db.mysql.sqlparser/src/stdafx.h \
+		${WRKSRC}/modules/db.mysql.sqlparser/src/mysql_sql_parser_fe.cpp \
 		${WRKSRC}/plugins/wb.printing/backend/stdafx.h \
 		${WRKSRC}/plugins/db.mysql/backend/db_plugin_be.cpp
 
