--- a/x11-wm/ede/Makefile
+++ b/x11-wm/ede/Makefile
@@ -3,6 +3,7 @@
 
 PORTNAME=	ede
 PORTVERSION=	2.0
+PORTREVSION=	1
 CATEGORIES=	x11-wm
 MASTER_SITES=	SF \
 		SF/${PORTNAME}/${PORTNAME}lib/${PORTVERSION}:edelib
