--- a/editors/vim/Makefile
+++ b/editors/vim/Makefile
@@ -8,7 +8,7 @@ PORTNAME?=	vim
 PATCHLEVEL=	669
 PORTVERSION=	7.3.${PATCHLEVEL}
 RELEASE=	vim-${PORTVERSION:C/\.[0-9a-z]*$//}
-PORTREVISION?=	0
+PORTREVISION?=	1
 CATEGORIES?=	editors
 MASTER_SITES=	${MASTER_SITE_VIM}
 DISTFILES=	${RELEASE}${EXTRACT_SUFX}
@@ -76,10 +76,10 @@ MLINKS+=	vim.1 gvim.1	vim.1 gview.1	vimdiff.1 gvimdiff.1 \
 MANLANG=	"" ru.KOI8-R ru.UTF-8 pl.ISO8859-2 pl.UTF-8 pl fr.ISO8859-1 \
 		fr.UTF-8 fr it.ISO8859-1 it.UTF-8 it
 USE_GETTEXT=	yes
-PLIST_SUB=	NLS=""
+PLIST_SUB+=	NLS=""
 .else
 MAKE_ARGS+=	CONF_OPT_NLS="--disable-nls"
-PLIST_SUB=	NLS="@comment "
+PLIST_SUB+=	NLS="@comment "
 .endif
 
 .if ${PORT_OPTIONS:MPYTHON}
