--- a/x11/yakuake-kde4/Makefile
+++ b/x11/yakuake-kde4/Makefile
@@ -3,6 +3,7 @@
 
 PORTNAME=	yakuake
 PORTVERSION=	2.9.9
+PORTREVISION=	1
 CATEGORIES=	x11 kde
 MASTER_SITES=	KDE/stable/${PORTNAME}/${PORTVERSION}/src
 PKGNAMESUFFIX=	-kde4
