- Fix plist - Bump PORTREVISION
Approved by:	portmgr (miwi)


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315673 35697150-7ecd-e111-bb59-0022644237b5

--- a/textproc/iso-schematron-xslt/Makefile
+++ b/textproc/iso-schematron-xslt/Makefile
@@ -2,6 +2,7 @@
 
 PORTNAME=	iso-schematron-xslt
 PORTVERSION=	20130313
+PORTREVISION=	1
 CATEGORIES=	textproc
 MASTER_SITES=	http://www.schematron.com/tmp/
 DISTFILES=	iso-schematron-xslt1.zip \
