- Mark broken fails to build
Reported by:	pointyhat
Approved by:	maintainer feedback timeout 3 weeks+; portmgr


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315678 35697150-7ecd-e111-bb59-0022644237b5

--- a/japanese/mozc-server/Makefile
+++ b/japanese/mozc-server/Makefile
@@ -29,6 +29,8 @@ USE_PYTHON=	yes
 USE_OPENSSL=	yes
 USE_PKGCONFIG=	build
 
+BROKEN=	fails to build
+
 MAKE_JOBS_SAFE=	yes
 
 BUILD_MOZC_LIST?=	mozc_server
