- Explicitly record required Qt4 components (thus fix build with kdelibs-4.10)
Approved by:	portmgr (miwi)


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315680 35697150-7ecd-e111-bb59-0022644237b5

--- a/deskutils/kdepim44-runtime/Makefile
+++ b/deskutils/kdepim44-runtime/Makefile
@@ -20,7 +20,8 @@ LATEST_LINK=	${PORTNAME}44
 USE_KDE4=	pimlibs kdeprefix kdehier sharedmime automoc4
 USES=		cmake:outsource
 USE_BZIP2=	yes
-USE_QT4=	qmake_build moc_build rcc_build uic_build
+USE_QT4=	qmake_build moc_build rcc_build uic_build \
+		corelib dbus gui network qtestlib xml
 USE_LDCONFIG=	yes
 MAKE_JOBS_SAFE=	yes
 
