--- a/deskutils/kdepim44/Makefile
+++ b/deskutils/kdepim44/Makefile
@@ -25,7 +25,8 @@ USE_KDE4=	kdelibs pimlibs \
 		akonadi kdeprefix kdehier automoc4 oxygen
 USES=		cmake:outsource
 USE_BZIP2=	yes
-USE_QT4=	qmake_build moc_build rcc_build uic_build
+USE_QT4=	qmake_build moc_build rcc_build uic_build \
+		corelib dbus designer gui network qt3support sql webkit
 USE_OPENLDAP=	yes
 USE_LDCONFIG=	yes
 MAKE_JOBS_SAFE=	yes
