--- a/graphics/kphotoalbum-kde4/Makefile
+++ b/graphics/kphotoalbum-kde4/Makefile
@@ -2,8 +2,7 @@
 # $FreeBSD$
 
 PORTNAME=	kphotoalbum
-PORTVERSION=	4.3
-PORTREVISION=	1
+PORTVERSION=	4.4
 CATEGORIES=	graphics kde
 MASTER_SITES=	${MASTER_SITE_KDE}
 MASTER_SITE_SUBDIR=	stable/${PORTNAME}/${PORTVERSION}/src
@@ -16,10 +15,10 @@ LIB_DEPENDS=	jpeg:${PORTSDIR}/graphics/jpeg \
 		exiv2:${PORTSDIR}/graphics/exiv2
 
 USE_KDE4=	kdehier kdelibs kdeprefix libkdcraw libkipi automoc4
-USE_QT4=	corelib qt3support \
+USE_QT4=	phonon sql \
 		qmake_build moc_build rcc_build uic_build
 USE_BZIP2=	yes
-USES=		cmake
+USES=		cmake:outsource
 MAKE_JOBS_SAFE=	yes
 
 LATEST_LINK=	${PORTNAME}-kde4
