--- a/graphics/libexif-gtk/Makefile
+++ b/graphics/libexif-gtk/Makefile
@@ -3,6 +3,7 @@
 
 PORTNAME=	libexif-gtk
 PORTVERSION=	0.4.0
+PORTREVISION=	1
 CATEGORIES=	graphics
 MASTER_SITES=	SF/libexif/${PORTNAME}/${PORTVERSION}
 
