--- a/editors/calligra-l10n/Makefile
+++ b/editors/calligra-l10n/Makefile
@@ -33,7 +33,7 @@ zh_TW_PORT=	chinese/calligra-l10n-zh_TW
 .include "${.CURDIR}/../../misc/kde4-l10n/files/kde4-lang-names"
 nb_NAME=	Norwegian Bokmal
 
-OPTIONS_DEFINE=	ALL
+OPTIONS_DEFINE=	ALL ${LANG_OPT_ALL}
 OPTIONS_DEFAULT=ALL
 
 ALL_DESC=	All localizations
@@ -42,17 +42,20 @@ ALL_DESC=	All localizations
 ${lang}_DETECT?=	${KDE4_PREFIX}/share/locale/${lang}/LC_MESSAGES/calligra.mo
 ${lang}_PORT?=		editors/calligra-l10n-${lang}
 ${lang}_NAME?=		${lang}
-${lang}_OPTION=		${lang:S/@/_/}
-OPTIONS_DEFINE+=	${${lang}_OPTION}
-${${lang}_OPTION}_DESC=	${${lang}_NAME} localization
+
+${lang}_OPT=		${lang:S/@/_/}
+LANG_OPT_ALL+=		${${lang}_OPT}
+${${lang}_OPT}_DESC=	${${lang}_NAME} localization
+
+${${lang}_OPT}_DEP=	${${lang}_DETECT}:${PORTSDIR}/${${lang}_PORT}
 .endfor
 
 .include <bsd.port.options.mk>
 
-.for lang in ${CALLIGRA_LANG_ALL}
-.if ${PORT_OPTIONS:MALL} || ${PORT_OPTIONS:M${${lang}_OPTION}}
-RUN_DEPENDS+=	${${lang}_DETECT}:${PORTSDIR}/${${lang}_PORT}
-.endif
+.for opt in ${LANG_OPT_ALL}
+. if ${PORT_OPTIONS:M${opt}} || ${PORT_OPTIONS:MALL}
+RUN_DEPENDS+=	${${opt}_DEP}
+. endif
 .endfor
 
 do-install:
