Fix pkg-plist warnings found by pkgng: do not try to delete empty directories which are only created when installed as a package. Do not create these directories either in that case.
While here, convert Makefile header.

Approved by:	portmgr (bapt)


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315685 35697150-7ecd-e111-bb59-0022644237b5

--- a/emulators/linux_base-f10/Makefile
+++ b/emulators/linux_base-f10/Makefile
@@ -1,9 +1,5 @@
-# New ports collection makefile for:	emulators/linux_base-f10
-# Date created:				2009-04-30
-# Whom:					bsam
-#
+# Created by: bsam
 # $FreeBSD$
-#
 
 PORTNAME=		f10
 PORTVERSION=		10
