- Mark BROKEN fails to build
Oked by:	glarkin

Approved by:	portmgr


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315691 35697150-7ecd-e111-bb59-0022644237b5

--- a/databases/drizzle/Makefile
+++ b/databases/drizzle/Makefile
@@ -18,6 +18,8 @@ GNU_CONFIGURE=	yes
 USE_GMAKE=	yes
 USE_LDCONFIG=	${PREFIX}/lib/drizzle
 
+BROKEN=		fails to build
+
 USE_ICONV=	yes
 
 .if defined(MAINTAINER_MODE)
