Fix conversion to optionsng
Reported by:	pointyhat
Approved by:	portmgr (implicit)


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315692 35697150-7ecd-e111-bb59-0022644237b5

--- a/audio/mpc/Makefile
+++ b/audio/mpc/Makefile
@@ -27,7 +27,7 @@ PLIST_FILES=	bin/${PORTNAME} %%PORTEXAMPLES%%%%EXAMPLESDIR%%/${PORTNAME}-complet
 
 .include <bsd.port.options.mk>
 
-.if ${PORT_OPTIONS:MEXAMPLESDIR}
+.if ${PORT_OPTIONS:MEXAMPLES}
 PLIST_DIRS=	%%EXAMPLESDIR%%
 .endif
 
