--- a/x11-wm/windowlab/Makefile
+++ b/x11-wm/windowlab/Makefile
@@ -3,39 +3,56 @@
 
 PORTNAME=	windowlab
 PORTVERSION=	1.40
+PORTREVISION=	1
 CATEGORIES=	x11-wm
 MASTER_SITES=	http://nickgravgaard.com/windowlab/
 EXTRACT_SUFX=	.tar
+DIST_SUBDIR=	repacked
 
 MAINTAINER=	ports@FreeBSD.org
-COMMENT=	A small window manager for X11
+COMMENT=	Small window manager for X11
 
-MAN1=		windowlab.1x
+LICENSE=	GPLv2
+
+OPTIONS_DEFINE=	XFT DOCS
 
 USE_XORG=	x11 xext
 USE_GMAKE=	yes
+MAKE_ENV=	XROOT="${LOCALBASE}" SYSCONFDIR="${ETCDIR}"
+MAKE_JOBS_SAFE=	yes
 
-BROKEN=		distfile mismatch
-
-MAKE_ARGS=	MENURC=${PREFIX}/etc/windowlab/menurc CC="${CC}"
-
-PLIST_FILES=	bin/windowlab etc/windowlab/menurc
-PLIST_DIRS=	etc/windowlab
-
+MAN1=		windowlab.1x
 PORTDOCS=	CHANGELOG README
+PLIST_FILES=	bin/windowlab %%ETCDIR%%/menurc
+PLIST_DIRS=	%%ETCDIR%%
+
+.include <bsd.port.options.mk>
+
+.if ${PORT_OPTIONS:MXFT}
+USE_XORG+=	xft
+USE_PKGCONFIG=	build
+MAKE_ENV+=	EXTRA_INC="$$(pkg-config --cflags xft)" \
+		EXTRA_LIBS="$$(pkg-config --libs xft)"
+CFLAGS+=	-DXFT
+.endif
 
 post-patch:
-	@${REINPLACE_CMD} -e 's,^CC =,CC ?=,' \
-		-e 's,/usr/X11R6,${LOCALBASE},g' ${WRKSRC}/Makefile
+	@${REINPLACE_CMD} -e \
+		's|^\(PREFIX\) =|\1 ?=| ; \
+		 s|^\(XROOT\) =|\1 ?=| ; \
+		 s|^\(SYSCONFDIR\) =|\1 ?=| ; \
+		 s|^\(CC\) =|\1 ?=|' ${WRKSRC}/Makefile
 
 do-install:
-	${INSTALL_PROGRAM} ${WRKSRC}/windowlab ${PREFIX}/bin
-	${INSTALL_MAN} ${WRKSRC}/windowlab.1x ${MANPREFIX}/man/man1
-	${MKDIR} ${PREFIX}/etc/windowlab
-	${INSTALL_DATA} ${WRKSRC}/windowlab.menurc ${PREFIX}/etc/windowlab/menurc
-.if !defined(NOPORTDOCS)
-	${MKDIR} ${DOCSDIR}
-	${INSTALL_DATA} ${PORTDOCS:S,^,${WRKSRC}/,} ${DOCSDIR}
+	(cd ${WRKSRC} && ${INSTALL_PROGRAM} windowlab ${PREFIX}/bin)
+	(cd ${WRKSRC} && ${INSTALL_MAN} windowlab.1x ${MANPREFIX}/man/man1)
+	@${MKDIR} ${ETCDIR}
+	(cd ${WRKSRC} && ${INSTALL_DATA} windowlab.menurc ${ETCDIR}/menurc)
+.if ${PORT_OPTIONS:MDOCS}
+	@${MKDIR} ${DOCSDIR}
+.for i in ${PORTDOCS}
+	(cd ${WRKSRC} && ${INSTALL_DATA} ${i} ${DOCSDIR})
+.endfor
 .endif
 
 .include <bsd.port.mk>
