--- a/games/xevil/Makefile
+++ b/games/xevil/Makefile
@@ -10,7 +10,7 @@ MASTER_SITES=	SF/${PORTNAME}.mirror \
 DISTNAME=	${PORTNAME}src${PORTVERSION:S/.r/r/}
 
 MAINTAINER=	ports@FreeBSD.org
-COMMENT=	A fast-action, networked, anti-social, kill-everything game
+COMMENT=	Fast-action, networked, anti-social, kill-everything game
 
 LICENSE=	GPLv2
 
@@ -18,13 +18,11 @@ OPTIONS_DEFINE=	DOCS
 
 NO_WRKSUBDIR=yes
 
-BROKEN=		does not build
-
 USE_ZIP=	yes
 USE_XORG=	xpm
 USE_DOS2UNIX=	*.cpp *.h config.mk makefile
 MAKEFILE=	makefile
-MAKE_ARGS=	DEPTH="${WKRSRC}"
+MAKE_ARGS=	DEPTH="${WRKSRC}"
 ALL_TARGET=	${OPSYS:L}
 MAKE_JOBS_SAFE=	yes
 
@@ -33,14 +31,14 @@ PLIST_FILES=	bin/${PORTNAME}
 
 .include <bsd.port.options.mk>
 
-port-patch:
+post-patch:
 	@${FIND} ${WRKSRC} -name "*.xpm" | ${XARGS} ${REINPLACE_CMD} -e \
 		's|^static char|static const char|'
 
 do-install:
 	${INSTALL_PROGRAM} ${WRKSRC}/x11/${OPSYS:U}/${PORTNAME} ${PREFIX}/bin
 .if ${PORT_OPTIONS:MDOCS}
-	@{MKDIR} ${DOCSDIR}
+	@${MKDIR} ${DOCSDIR}
 	${INSTALL_DATA} ${WRKSRC}/readme.txt ${DOCSDIR}
 	@${MKDIR} ${DOCSDIR}/instructions
 	${INSTALL_DATA} ${WRKSRC}/instructions/* ${DOCSDIR}/instructions
