Fix package building. There is some interaction between HAVE_GNOME and WITH_GNOME that I don't really get. Adding back the WITH_GNOME part fixes the packages. Tested by pointyhat and miwi's tinderbox.
Submitted by:	pointyhat (via miwi)
Approved by:	portmgr (miwi)


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315697 35697150-7ecd-e111-bb59-0022644237b5

--- a/x11/gnome-applets/Makefile
+++ b/x11/gnome-applets/Makefile
@@ -60,6 +60,11 @@ PLIST_SUB+=	COMMANDER="" OLDCOMMANDER="@comment "
 PLIST_SUB+=	COMMANDER="@comment " OLDCOMMANDER=""
 .endif
 
+.if defined(PACKAGE_BUILDING)
+.undef WITHOUT_GNOME 	 
+WITH_GNOME=	yes 	 
+.endif
+
 .include <bsd.port.pre.mk>
 
 .if ( exists(${pygnomedesktop_DETECT}) ) || \
