- Fix build on pointyhat by making the regression-test target   depend on build, instead of install. This avoids having PREFIX   populated prior to install target.
Reported by:	miwi
Approved by:	portmgr


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315700 35697150-7ecd-e111-bb59-0022644237b5

--- a/lang/kawa/Makefile
+++ b/lang/kawa/Makefile
@@ -32,7 +32,7 @@ pre-patch:
 	@${REINPLACE_CMD} -e 's|{JAVAC-javac}|{JAVAC-${JAVAC}}|g;' \
 		-e 's|{JAVA-java}|{JAVA-${JAVA}}|g;' ${WRKSRC}/configure
 
-regression-test: install
+regression-test: build
 	cd ${WRKSRC} && ${GMAKE} check
 
 .include <bsd.port.mk>
