--- a/devel/kdevplatform/Makefile
+++ b/devel/kdevplatform/Makefile
@@ -16,7 +16,8 @@ LIB_DEPENDS=	svn_client-1:${PORTSDIR}/devel/subversion \
 		qjson:${PORTSDIR}/devel/qjson
 
 USE_KDE4=	kate_run kdehier kdelibs kdeprefix automoc4
-USE_QT4=	qmake_build moc_build uic_build rcc_build
+USE_QT4=	qmake_build moc_build uic_build rcc_build \
+		corelib designer_build gui webkit
 USE_BZIP2=	yes
 USES=		cmake
 MAKE_JOBS_SAFE=	yes
