- Be precise in CONFLICTS_INSTALL, we want conflicts with strigi before split   (<= 0.7.8_1) only
Reported by:	cperciva
Approved by:	portmgr (miwi)


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315710 35697150-7ecd-e111-bb59-0022644237b5

--- a/deskutils/strigi/Makefile.common
+++ b/deskutils/strigi/Makefile.common
@@ -6,7 +6,7 @@ DISTNAME=		strigi-${STRIGI_VERSION}
 DISTINFO_FILE=		${.CURDIR}/../strigi/distinfo
 DESCR=			${.CURDIR}/../strigi/pkg-descr
 
-CONFLICTS_INSTALL=	strigi-0.*
+CONFLICTS_INSTALL=	strigi-0.7.[0-7]* strigi-0.7.8 strigi-0.7.8_1
 
 USE_BZIP2=		yes
 USES+=			cmake:outsource
