Fix building by fixing conversion to optionsng. It now behaves the same as it used to do before conversion.
Reported by:	pointyhat
Approved by:	portmgr (implicit)
With hat:	portmgr


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315715 35697150-7ecd-e111-bb59-0022644237b5

--- a/security/knock/Makefile
+++ b/security/knock/Makefile
@@ -21,8 +21,9 @@ GNU_CONFIGURE=	yes
 
 CFLAGS+=	-I${LOCALBASE}/include
 
-OPTIONS_SINGLE=	SG1
-OPTIONS_SINGLE_SG1=	CLIENT SERVER
+OPTIONS_MULTI=	MT1
+OPTIONS_MULTI_MT1=	CLIENT SERVER
+OPTIONS_DEFAULT=	CLIENT SERVER
 
 .include <bsd.port.options.mk>
 
