Fix broken sed that made extra docs install even in the NOPORTDOCS case.
Noted by:	bapt
Approved by:	portmgr (bapt)


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315716 35697150-7ecd-e111-bb59-0022644237b5

--- a/graphics/feh/Makefile
+++ b/graphics/feh/Makefile
@@ -32,7 +32,7 @@ PORTDOCS=	AUTHORS ChangeLog README TODO
 .include	<bsd.port.options.mk>
 
 post-patch:
-	@${REINPLACE_CMD} 's#/install-man install-doc#install-man#' \
+	@${REINPLACE_CMD} 's/install-man install-doc/install-man/' \
 		${WRKSRC}/Makefile
 
 post-install:
