--- a/x11/xkeyboard-config/Makefile
+++ b/x11/xkeyboard-config/Makefile
@@ -1,9 +1,5 @@
-# New ports collection makefile for:	xkeyboard-config
-# Date Created:				Dec 20 2006
-# Whom:					Florent Thoumie <flz@FreeBSD.org>
-#
+# Created by: Florent Thoumie <flz@FreeBSD.org>
 # $FreeBSD$
-#
 
 PORTNAME=	xkeyboard-config
 PORTVERSION=	2.5.1
@@ -18,9 +14,10 @@ BUILD_DEPENDS=	xkbcomp:${PORTSDIR}/x11/xkbcomp \
 		xsltproc:${PORTSDIR}/textproc/libxslt
 XORG_CAT=	data
 
+USES=		pathfix
 USE_BZIP2=	yes
 USE_GMAKE=	yes
-USE_GNOME=	intlhack gnomehack
+USE_GNOME=	intlhack
 USE_PERL5_BUILD=yes
 GNU_CONFIGURE=	yes
 CONFIGURE_ARGS=	--with-xkb-base=${PREFIX}/share/X11/xkb \
@@ -30,16 +27,18 @@ LDFLAGS+=	-L${LOCALBASE}/lib
 
 MAN7=		xkeyboard-config.7
 
-.if defined(WITHOUT_NLS)
+.include <bsd.port.options.mk>
+
+.if ${PORT_OPTIONS:MNLS}
+USE_ICONV=	yes
+USE_GETTEXT=	yes
+PLIST_SUB+=	NLS=""
+.else
 CONFIGURE_ARGS+=	--disable-nls
 CONFIGURE_ENV+=	MSGFMT="/bin/echo '(GNU '" \
 		XGETTEXT="/bin/echo '(GNU '" \
 		MSGMERGE="/bin/echo '(GNU '"
 PLIST_SUB+=	NLS="@comment "
-.else
-USE_ICONV=	yes
-USE_GETTEXT=	yes
-PLIST_SUB+=	NLS=""
 .endif
 
 post-patch:
