Fix conversion to new option framework
Reported by:	bdrewery
Approved by:	portmgr (implicit)
With hat:	portmgr


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315721 35697150-7ecd-e111-bb59-0022644237b5

--- a/databases/freetds/Makefile
+++ b/databases/freetds/Makefile
@@ -54,7 +54,7 @@ LIB_DEPENDS+=	odbc:${PORTSDIR}/databases/unixODBC
 CONFIGURE_ARGS+=	--with-unixodbc=${LOCALBASE}
 .endif
 
-.if ${PORT_OPTIONS:MIODBC) || defined(WITH_UNIXODBC}
+.if ${PORT_OPTIONS:MIODBC} || ${PORT_OPTIONS:MUNIXODBC}
 PLIST_SUB+=	ODBC=""
 .else
 PLIST_SUB+=	ODBC="@comment "
