- Fix plist: don't remove kdehier4 directories   while here: - Trim Makefile header - Drop indefinite article from COMMENT - Switch to out-of-source build - Explicitly depend on required Qt4 components - Rephrase description
Approved by:	portmgr (miwi)


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315724 35697150-7ecd-e111-bb59-0022644237b5

--- a/multimedia/bangarang/Makefile
+++ b/multimedia/bangarang/Makefile
@@ -1,7 +1,4 @@
-# New ports collection makefile for: bangarang
-# Date created:        11 June 2010
-# Whom:                Daniel Nebdal <dnebdal@gmail.com>
-#
+# Created by: Daniel Nebdal <dnebdal@gmail.com>
 # $FreeBSD$
 
 PORTNAME=	bangarang
@@ -11,16 +8,17 @@ CATEGORIES=	multimedia kde
 MASTER_SITES=	${MASTER_SITE_GOOGLE_CODE}
 
 MAINTAINER=	dnebdal@gmail.com
-COMMENT=	A media player for KDE4
+COMMENT=	Media player for KDE 4
 
 LICENSE=	GPLv3
 
 LIB_DEPENDS=	tag.1:${PORTSDIR}/audio/taglib
 
 PROJECTHOST=	bangarangissuetracking
-USES=		cmake
+USES=		cmake:outsource
 USE_GETTEXT=	yes
-USE_QT4=	qmake_build moc_build rcc_build uic_build
+USE_QT4=	qmake_build moc_build rcc_build uic_build \
+		corelib gui phonon
 USE_KDE4=	automoc4 kdelibs kdeprefix
 
 MAKE_JOBS_SAFE=	yes
