- Fix build with recent KDE by updating to 2.2.1   while here: - Trim Makefile header - Switch to out-of-source build - Explicitly depend on required Qt4 component
Approved by:	portmgr (miwi)


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315725 35697150-7ecd-e111-bb59-0022644237b5

--- a/x11-themes/kde4-windeco-crystal/Makefile
+++ b/x11-themes/kde4-windeco-crystal/Makefile
@@ -1,13 +1,8 @@
-# New ports collection makefile for:   crystal
-# Date created:                        15th March, 2005
-# Whom:                                decept
-#
+# Created by: decept
 # $FreeBSD$
-#
 
 PORTNAME=	crystal
-PORTVERSION=	2.1.0
-PORTREVISION=	2
+PORTVERSION=	2.2.1
 CATEGORIES=	x11-themes kde
 MASTER_SITES=	http://www.kde-look.org/CONTENT/content-files/
 PKGNAMEPREFIX=	kde-windeco-
@@ -20,8 +15,9 @@ LICENSE=	GPLv2
 
 USE_BZIP2=	yes
 USE_KDE4=	kdelibs kdehier kdeprefix automoc4 workspace
-USE_QT4=	corelib qmake_build moc_build rcc_build uic_build
-USES=		cmake
+USE_QT4=	qmake_build moc_build rcc_build uic_build \
+		corelib gui qt3support
+USES=		cmake:outsource
 WRKSRC=		${WRKDIR}/${PORTNAME}-${PORTVERSION}
 
 .include <bsd.port.mk>
