Regripper distfile has been rerolled. Diff available at: http://people.freebsd.org/~antoine/ports/1/rip.pl.diff
Reported by:	Francis Provencher
Approved by:	portmgr (bapt), eadler (mentor)


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315728 35697150-7ecd-e111-bb59-0022644237b5

--- a/security/regripper/Makefile
+++ b/security/regripper/Makefile
@@ -3,6 +3,7 @@
 
 PORTNAME=	regripper
 DISTVERSION=	2.5
+PORTREVISION=	1
 CATEGORIES=	security
 MASTER_SITES=	GOOGLE_CODE
 DISTNAME=	rrv${DISTVERSION}
@@ -25,7 +26,7 @@ PLIST_FILES=	bin/rip.pl
 post-patch:
 	${REINPLACE_CMD} -e 's|#! c:\\perl\\bin\\perl.exe|#!${PERL}| ; \
 		s|plugindir = $$str|plugindir = "${DATADIR}"| ; \
-		s|require "plugins\\\\|require "${DATADIR}plugins/|' ${WRKSRC}/rip.pl
+		s|require "plugins/|require "${DATADIR}plugins/|' ${WRKSRC}/rip.pl
 
 do-install:
 	${INSTALL_SCRIPT} ${WRKSRC}/rip.pl ${PREFIX}/bin
