Fix conversion to optionsng breaking multibyte support
Reported by:	Sergey V. Dyatko via irc
Tested by:	Sergey V. Dyatko via irc
Approved by:	portmgr (implicit)


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315730 35697150-7ecd-e111-bb59-0022644237b5

--- a/editors/vim-lite/Makefile
+++ b/editors/vim-lite/Makefile
@@ -1,10 +1,5 @@
-# ex:ts=8
-# Ports collection makefile for:  vim-lite
-# Date created:			  Fri Jun 25, 1999
-# Whom:				  David O'Brien (obrien@NUXI.com)
-#
+# Created by: David O'Brien (obrien@NUXI.com)
 # $FreeBSD$
-#
 
 LITE=		yes
 
@@ -12,5 +7,7 @@ MASTERDIR=	${.CURDIR}/../vim
 
 MAINTAINER?=	obrien@FreeBSD.org
 COMMENT?=	Vi "workalike", with many additional features (Lite package)
+
+PORTREVISION=	2
 
 .include "${MASTERDIR}/Makefile"
