Fix leftovers by using USES=charsetfix Remove now useless pre-configure target While here convert NOPORTDOCS to DOCS option
Reported by:	pointyhat via miwi
Approved by:	portmgr (implicit)


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315731 35697150-7ecd-e111-bb59-0022644237b5

--- a/archivers/gzip/Makefile
+++ b/archivers/gzip/Makefile
@@ -11,6 +11,7 @@ MASTER_SITE_SUBDIR=	${PORTNAME}
 MAINTAINER=	gabor@FreeBSD.org
 COMMENT=	Compression utility designed to be a replacement for compress
 
+USES=		charsetfix
 GNU_CONFIGURE=	yes
 
 MAN1=	gunzip.1 gzexe.1 gzip.1 zcat.1 zcmp.1 zdiff.1 zforce.1 \
@@ -20,27 +21,22 @@ INFO=	gzip
 DOC_FILES=	AUTHORS COPYING ChangeLog ChangeLog-2007 INSTALL NEWS README \
 		THANKS TODO
 
-OPTIONS_DEFINE=	RSYNCABLE
+OPTIONS_DEFINE=	RSYNCABLE DOCS
 OPTIONS_DEFAULT=	RSYNCABLE
 RSYNCABLE_DESC=	Include --rsyncable patch
 
-.include <bsd.port.pre.mk>
+.include <bsd.port.options.mk>
 
 .if ${PORT_OPTIONS:MRSYNCABLE}
 EXTRA_PATCHES=	${FILESDIR}/extra-patch-gzip-rsyncable.diff
 .endif
 
-post-configure:
-	@${REINPLACE_CMD} -e 's|^SHELL =.*|SHELL=/bin/sh|' ${WRKSRC}/Makefile
-	@${REINPLACE_CMD} -e 's|need_charset_alias=true|need_charset_alias=false|g' \
-		${WRKSRC}/lib/Makefile.in
-
 post-install:
-.if !defined(NOPORTDOCS)
+.if ${PORT_OPTIONS:MDOCS}
 	@${MKDIR} ${DOCSDIR}
 .for file in ${DOC_FILES}
 	@${INSTALL_DATA} ${WRKSRC}/${file} ${DOCSDIR}
 .endfor
 .endif
 
-.include <bsd.port.post.mk>
+.include <bsd.port.mk>
