Fix pkg-list for postgresql84-server
Approved by:	portmgr (miwi)


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315734 35697150-7ecd-e111-bb59-0022644237b5

--- a/databases/postgresql84-contrib/Makefile
+++ b/databases/postgresql84-contrib/Makefile
@@ -2,11 +2,14 @@
 # $FreeBSD$
 
 PORTNAME=	postgresql
-PKGNAMESUFFIX=	-contrib
+PORTREVISION=	0
 CATEGORIES=	databases
+PKGNAMESUFFIX=	-contrib
 
 MAINTAINER=	pgsql@FreeBSD.org
 COMMENT=	The contrib utilities from the PostgreSQL distribution
+
+LIB_DEPENDS=	xslt.2:${PORTSDIR}/textproc/libxslt xml2.5:${PORTSDIR}/textproc/libxml2
 
 USE_PGSQL=	yes
 DEFAULT_PGSQL_VER=84
@@ -19,7 +22,6 @@ INSTALL_DIRS=	contrib
 
 SLAVE_ONLY=	yes
 CONFIGURE_ARGS+=--with-libxslt --with-libxml --with-openssl
-LIB_DEPENDS=	xslt.2:${PORTSDIR}/textproc/libxslt xml2.5:${PORTSDIR}/textproc/libxml2
 
 post-install:
 	@- ${INSTALL_DATA} ${WRKSRC}/contrib/README ${DOCSDIR}/contrib/README
