--- a/databases/postgresql84-client/Makefile
+++ b/databases/postgresql84-client/Makefile
@@ -8,6 +8,7 @@
 # See Mk/bsd.databases.mk for more info
 
 PORTNAME=	postgresql
+PORTREVISION=	0
 PKGNAMESUFFIX=	-client
 
 COMMENT=	PostgreSQL database (client)
