- Fix pkg-plist - Remove custom install since adoption of USE_PYDISTUTILS
Approved by:	portmgr (tabthorpe), jpaetzel (mentor)


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@315738 35697150-7ecd-e111-bb59-0022644237b5

--- a/audio/py-pyacoustid/Makefile
+++ b/audio/py-pyacoustid/Makefile
@@ -16,16 +16,6 @@ LIB_DEPENDS=	chromaprint:${PORTSDIR}/audio/chromaprint
 
 USE_PYTHON=	yes
 USE_PYDISTUTILS=	easy_install
-PLIST_FILES=	%%PYTHON_SITELIBDIR%%/acoustid.py \
-		%%PYTHON_SITELIBDIR%%/chromaprint.py
+PLIST_FILES=	%%PYTHON_SITELIBDIR%%/%%PYEASYINSTALL_EGG%%
 
-.include <bsd.port.pre.mk>
-
-do-build:
-	@(cd ${BUILD_WRKSRC}; ${SETENV} ${MAKE_ENV} ${PYTHON_CMD} \
-		${PYSETUP} build)
-
-do-install:
-	cd ${WRKSRC}/build/lib && ${COPYTREE_SHARE} \* ${PYTHONPREFIX_SITELIBDIR}/
-
-.include <bsd.port.post.mk>
+.include <bsd.port.mk>
